--- a/DAY_0213/ex_naver_open API.ipynb
+++ b/DAY_0213/ex_naver_open API.ipynb
@@ -662,7 +662,7 @@
     "\n",
     "def get_request_url(url):\n",
     "    client_id = 'yKYYEWfLUexswfRnlEsH'\n",
-    "    cliend_secret = '9pM8DfUnRu'\n",
+    "    client_secret = '9pM8DfUnRu'\n",
     "\n",
     "    req = urllib.request.Request(url)\n",
     "    req.add_header('X-Naver-Client-Id', client_id)\n",
@@ -1820,16 +1820,8 @@
     "    result_df.to_csv(f'{search_text}_naver_{node}.csv',\tindex=False,\tencoding='utf-8')\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    main()\n",
-    "\n"
+    "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
