--- a/DAY_0207/ex_bs.ipynb
+++ b/DAY_0207/ex_bs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### BeautifulSoup 첫 예제 <hr>"
+    "### BeautifulSoup 첫 예제 <hr>"
    ]
   },
   {
