--- a/DAY_0207/ex_crawling.ipynb
+++ b/DAY_0207/ex_crawling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 웹 페이지 가져오기 <hr>"
+    "### 웹 페이지 가져오기 <hr>"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### BeautifulSoup 라이브러리 <hr>"
+    "### BeautifulSoup 라이브러리 <hr>"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 존재하지 않는 태그 예외 처리 <hr>"
+    "### 존재하지 않는 태그 예외 처리 <hr>"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### urllib.request와 requests 차이점 <hr>\n",
+    "### urllib.request와 requests 차이점 <hr>\n",
     "- requests 모듈 사용 예제"
    ]
   },
