--- a/DAY_0213/ex_data_to_csv.ipynb
+++ b/DAY_0213/ex_data_to_csv.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 데이터를 CSV파일로 저장 <hr>"
+    "### 데이터를 CSV파일로 저장 <hr>"
    ]
   },
   {
